# bioframe

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  bedframe.py  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements.txt  requirements_doc.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  publish_pypi.yml  python-package.yml  python-publish-test.yml  python-publish.yml  pythonpackage.yml
bedframe/: __init__.py  bedtools.py  genome.py  io.py  utils.py
bioframe/: __init__.py  _process.py  _region.py  _version.py  arrops.py  core.py  dask.py  definitions.py  extras.py  formats.py  frameops.py  genomeops.py  io.py  ops.py  region.py  remote.py  resources.py  schemas.py  tools.py  util.py  vis.py  viz.py
bioframe/core/: __init__.py  arrops.py  checks.py  construction.py  specs.py  stringops.py
bioframe/io/: __init__.py  assembly.py  bed.py  dask.py  fileops.py  formats.py  process.py  resource.py  resources.py  schemas.py
bioframe/io/data/: GRCh37.seqinfo.tsv  _assemblies.yml  ce10.seqinfo.tsv  ce11.seqinfo.tsv  danRer10.seqinfo.tsv  danRer11.seqinfo.tsv  dm3.seqinfo.tsv  dm6.seqinfo.tsv  hg19.seqinfo.tsv  hg38.chrom.sizes  hg38.seqinfo.tsv  hs1.seqinfo.tsv  mm10.seqinfo.tsv  mm39.seqinfo.tsv  mm9.seqinfo.tsv  sacCer3.seqinfo.tsv  t2t-chm13-v1.0.seqinfo.tsv  t2t-chm13-v1.1.seqinfo.tsv  wuhCor1.seqinfo.tsv
bioframe/sandbox/: binned.py  clients.py  gtf_io.py  parquet_io.py
docs/: api-construction.rst  api-extras.rst  api-fileops.rst  api-intervalops.rst  api-io.rst  api-lowlevel.md  api-resources.rst  api-validation.rst  api-vis.rst  api.rst  arrops.rst  conf.py  core.rst  fileops.rst  guide-bedtools.md  guide-deeptools.md  guide-definitions.rst  guide-intervalops.md  guide-io.ipynb  guide-performance.ipynb  guide-quickstart.rst  guide-recipes.md  guide-specifications.rst  guide-technical-notes.rst  index.rst  notebooks.rst  ops.rst  quickstart.rst  requirements_doc.txt  requirements_rtd.txt  technical-notes.rst  times100.bw  utils.rst  vis.rst
docs/core/: arrops.rst  checks.rst  construction.rst  specs.rst  stringops.rst
docs/lowlevel/: arrops.rst  specs.rst  stringops.rst
docs/notebooks/: arrops_tutorial.ipynb  intervals_tutorial.ipynb  intervals_tutorials.ipynb  performance.ipynb  recipes.ipynb  tutorial_assign_motifs_to_peaks.ipynb
docs/tutorials/: tutorial_assign_motifs_to_peaks.ipynb  tutorial_assign_peaks_to_genes.ipynb
docs/tutorials/.ipynb_checkpoints/: arrops_tutorial-checkpoint.ipynb  intervals_tutorial-checkpoint.ipynb  intervals_tutorial-checkpoint.md  performance-checkpoint.ipynb  recipes-checkpoint.ipynb
src/bioframe/: __init__.py  extras.py  ops.py  vis.py
src/bioframe/core/: arrops.py  checks.py  specs.py  stringops.py
src/bioframe/io/: bed.py  fileops.py  schemas.py
src/bioframe/io/data/: ce10.seqinfo.tsv  ce11.seqinfo.tsv  hg19.cytoband.tsv  hg38.cytoband.tsv  hs1.cytoband.tsv  mm39.seqinfo.tsv  mm9.seqinfo.tsv  sacCer3.seqinfo.tsv
tests/: test_assembly_info.py  test_bed.py  test_core.py  test_core_checks.py  test_core_construction.py  test_core_specs.py  test_core_stringops.py  test_definitions.py  test_extras.py  test_fileops.py  test_genomeops.py  test_io.py  test_ops.py  test_ops_select.py  test_region.py  test_resources.py  test_utils.py  test_vis.py
tests/test_data/: bed12.bed  bed9.bed  jaspar.bed  narrowPeak.bed  test.chrom.sizes  test.fa  test.fa.fai  toy.bam  toy.bam.bai
