[build-system]
requires = ["uv_build>=0.7.19"]
build-backend = "uv_build"

[project]
name = "bioframe"
version = "0.8.0"
description = "Operations and utilities for Genomic Interval Dataframes."
license = {text = "MIT"}
authors = [
  {name = "Open2C", email = "open.chromosome.collective@gmail.com"},
]
keywords = [
    "pandas",
    "dataframe",
    "genomics",
    "epigenomics",
    "bioinformatics",
    "interval operations",
    "genomic ranges",
    "bedtools",
    "bedframe",
    "viewframe",
    "bed",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "numpy>=1.10, <3",
    "pandas>=1.3",
    "pyyaml",
    "requests",
    "typing-extensions ; python_version<'3.9'",
    "importlib-metadata ; python_version<'3.8'",
    "importlib-resources ; python_version<'3.9'",
]

[dependency-groups]
test = [
    "pytest>=6.0",
]
docs = [
    "autodocsumm",
    "myst_nb",
    "myst_parser",
    "sphinx >=4.0",
    "sphinx-autobuild",
    "sphinx_rtd_theme",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints",
]
dev = [
    { include-group = "test" },
    { include-group = "docs" },
    "biopython",
    "pre-commit",
    "pysam",
    "pybbi",
    "ruff",
]

[project.urls]
homepage = "https://github.com/open2c/bioframe"
documentation = "https://bioframe.readthedocs.io"
source = "https://github.com/open2c/bioframe"
issues = "https://github.com/open2c/bioframe/issues"
changelog = "https://github.com/open2c/bioframe/blob/main/CHANGES.md"

[tool.ruff]
exclude = [
    ".venv",
]

[tool.ruff.lint]
extend-select = [
    "B",  # bugbear
    # "C",  # mccabe complexity
    # "D",  # pydocstyle
    "E",  # style errors
    "F",  # pyflakes
    "I",  # isort
    "RUF", # ruff-specific rules
    "UP", # pyupgrade
    "W",  # style  warnings
]

[tool.ruff.lint.isort]
known-first-party = ["bioframe"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_level = "INFO"
testpaths = [
  "tests",
]
